--- a/SemanticData/UAModelDesignExport/SemanticData.UAModelDesignExport.csproj
+++ b/SemanticData/UAModelDesignExport/SemanticData.UAModelDesignExport.csproj
@@ -20,9 +20,9 @@
     <ApplicationIcon />
     <OutputType>Library</OutputType>
     <StartupObject />
-    <Version>6.3.3</Version>
-    <AssemblyVersion>6.3.3</AssemblyVersion>
-    <FileVersion>6.3.3</FileVersion>
+    <Version>6.4.1</Version>
+    <AssemblyVersion>6.4.1</AssemblyVersion>
+    <FileVersion>6.4.1</FileVersion>
     <PackageIconUrl>https://github.com/mpostol/OPC-UA-OOI/blob/master/CommonResources/Media/Logo64.PNG?raw=true</PackageIconUrl>
     <Title>Object-Oriented Internet Semantic-Data UAModelDesign Export</Title>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
@@ -47,9 +47,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\Infrastructure\Common.Infrastructure.csproj" />
-    <ProjectReference Include="..\BuildingErrorsHandling\SemanticData.BuildingErrorsHandling.csproj" />
-    <ProjectReference Include="..\InformationModelFactory\SemanticData.InformationModelFactory.csproj" />
+    <PackageReference Include="UAOOI.Common.Infrastructure" Version="6.4.1-Hotel" />
+    <PackageReference Include="UAOOI.SemanticData.BuildingErrorsHandling" Version="6.3.3-Golf" />
+    <PackageReference Include="UAOOI.SemanticData.InformationModelFactory" Version="5.1.0" />
   </ItemGroup>
 
   <ItemGroup>
