--- a/SemanticData/UANodeSetValidation/SemanticData.UANodeSetValidation.csproj
+++ b/SemanticData/UANodeSetValidation/SemanticData.UANodeSetValidation.csproj
@@ -8,7 +8,7 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>OPCUAOOIKey.snk</AssemblyOriginatorKeyFile>
     <PackageId>UAOOI.SemanticData.UANodeSetValidation</PackageId>
-    <Version>6.3.3</Version>
+    <Version>6.4.1</Version>
     <Authors>MPostol</Authors>
     <Product>commsvr.com</Product>
     <Description>This project supports validation of the OPC UA Address Space captured in the xml file against the OPC UA Specyfication. It is assumed that the Address Space is represented as a XML file compliant with the UANodeSet schema.
@@ -20,9 +20,9 @@ It is part of the project supporting OPC UA Object Oriented Internet paradigm.</
     <RepositoryUrl>https://github.com/mpostol/OPC-UA-OOI</RepositoryUrl>
     <RepositoryType>GitHub</RepositoryType>
     <PackageTags>Object Oriented Internet, OPC UA, Information Model, IoT, M2M, DOA,</PackageTags>
-    <AssemblyVersion>6.3.3</AssemblyVersion>
+    <AssemblyVersion>6.4.1</AssemblyVersion>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <FileVersion>6.3.3</FileVersion>
+    <FileVersion>6.4.1</FileVersion>
     <Company>commsvr.com</Company>
     <PackageIconUrl>https://github.com/mpostol/OPC-UA-OOI/blob/master/CommonResources/Media/Logo64.PNG?raw=true</PackageIconUrl>
   </PropertyGroup>
@@ -59,9 +59,9 @@ It is part of the project supporting OPC UA Object Oriented Internet paradigm.</
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Common\Infrastructure\Common.Infrastructure.csproj" />
-    <ProjectReference Include="..\BuildingErrorsHandling\SemanticData.BuildingErrorsHandling.csproj" />
-    <ProjectReference Include="..\InformationModelFactory\SemanticData.InformationModelFactory.csproj" />
+    <PackageReference Include="UAOOI.Common.Infrastructure" Version="6.4.1-Hotel" />
+    <PackageReference Include="UAOOI.SemanticData.BuildingErrorsHandling" Version="6.3.3-Golf" />
+    <PackageReference Include="UAOOI.SemanticData.InformationModelFactory" Version="5.1.0" />
   </ItemGroup>
 
   <ItemGroup>
